# Aeonmi

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  __tracked_files.txt  aeonmi.run.js  build.rs  build_windows.ps1  control.ai  demo.ai  demo.qube  env_qiskit.cmd  greet.ai  hello.ai  math.ai  out.ai  out.js  output.ai  package-lock.json  simple.ai  simple_test.ai  strings.ai  temp_cleanup.ai  temp_exec_test.ai  temp_keep.ai  test_scoping.ai  test_vars.ai  titan_math_demo.ai  warnings.txt
.cargo/: config.toml
.github/workflows/: release.yml
docs/: Aeonmi_Language_Guide.md  INCREMENTAL_AND_METRICS.md  domain_quantum_vault.md
examples/: aeonmi_focus_flow.ai  branches.rs  complete_demo.ai  control_flow.ai  functions.ai  getting_started.ai  grover_search.ai  h_stub.ai  hello.ai  math.ai  meeting_demo.ai  precedence.ai  quantum.ai  quantum_demo.rs  quantum_error_correction.ai  quantum_glyph.ai  quantum_teleportation.ai  qube_hieroglyphic.ai  vm_smoke.rs
gui/: README.md  package.json  plan.md  server.js
gui/static/: index.html  main.js  monaco_ai_language.js
gui/tauri_bridge/: Cargo.toml  README.md
gui/tauri_bridge/.github/workflows/: ci.yml
gui/tauri_bridge/src/: commands.rs  main.rs
gui/tauri_bridge/static/: index.html  main.js
gui/tauri_bridge/tests/: smoke_test.rs  token_snapshot.rs
gui/tauri_tauri/: README.md
gui/tauri_tauri/src/: index.html  main.js
gui/tauri_tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/tauri_tauri/src-tauri/src/: main.rs
scripts/: scan_history_large_files.ps1  scan_large_files.ps1
scripts/git-hooks/: pre-commit
src/: cli.rs  cli_vault.rs  config.rs  encryption.rs  gui_bridge.rs  lib.rs  main.rs  vault.rs
src/ai/: copilot.rs  deepseek.rs  mod.rs  openai.rs  perplexity.rs
src/commands/: ast.rs  compile.rs  edit.rs  format.rs  fs.rs  lint.rs  mod.rs  quantum.rs  repl.rs  run.rs  tokens.rs  vault.rs  vm.rs
src/core/: ai_emitter.rs  ai_provider.rs  api_keys.rs  artifact_cache.rs  ast.rs  bytecode.rs  code_actions.rs  code_generator.rs  compiler.rs  debug.rs  diagnostics.rs  error.rs  formatter.rs  incremental.rs  ir.rs  lexer.rs  lib.rs  lowering.rs  mod.rs  parser.rs  qpoly.rs  quantum_extract.rs  quantum_ir.rs  scope_map.rs  semantic_analyzer.rs  symbols.rs  token.rs  types.rs  vm.rs  vm_bytecode.rs
src/core/titan/: advanced_fourier_signal_processing.rs  advanced_linear_algebra.rs  advanced_quantum_math.rs  advanced_tensor_calculus.rs  algebra.rs  algorithmic_crypto.rs  algorithmic_ml.rs  algorithmic_ml2.rs  algorithmic_optimization.rs  algorithmiccrypto.rs  anumerics.rs  arithmetic.rs  calculus.rs  chaos_theory_dynamical_systems.rs  complex_numbers.rs  crypto.rs  differential_equations.rs  differential_geometry.rs  discrete_math.rs  energy.rs  energy2.rs  experimental.rs  experimentals.rs  fourier_wavelet.rs  fractals.rs  gates.rs  geometry.rs  interdimensional.rs  lattice.rs  linear_algebra.rs  mathquantum.rs  merkle.rs  mod.rs  multi_dimensional_math.rs  numerical_solvers.rs  numerics.rs  ops.rs  optimization.rs  probability_statistics.rs  qiskit_bridge.rs  (+16 more)
src/io/: atomic.rs  mod.rs
src/shell/: mod.rs
src/tui/: editor.rs  mod.rs
tests/: ai_emitter_golden.rs  assign_and_calls.rs  builtins_len.rs  bytecode_associative_fold.rs  bytecode_basic.rs  bytecode_const_folding.rs  bytecode_disasm.rs  bytecode_for.rs  bytecode_function.rs  bytecode_if.rs  bytecode_logical.rs  bytecode_max_frames.rs  bytecode_opt_stats.rs  bytecode_overflow.rs  bytecode_recursion.rs  bytecode_while.rs  cli_opt_stats_json.rs  cli_smoke.rs  code_actions_new.rs  comparisons.rs  compiler_pipeline.rs  control_flow.rs  deep_propagation.rs  diagnostics.rs  errors_extra.rs  exec_cleanup.rs  exec_smoke.rs  exec_watch.rs  format_snapshots.rs  functions.rs  incremental_partial.rs  key_rotate.rs  legacy_flags.rs  metrics_bench.rs  metrics_function.rs  metrics_history_reload.rs  metrics_history_reload_feature.rs  metrics_numeric.rs  metrics_numeric_deep.rs  metrics_savings.rs  (+24 more)
tests/snapshots/: format_snapshots__control_flow.ai.snap  format_snapshots__functions.ai.snap  format_snapshots__glyph.ai.snap  format_snapshots__hello.ai.snap
