[package]
name = "aeonmi_project"
version = "0.2.0"
edition = "2024"

[dependencies]
unicode-ident = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[dev-dependencies]
tempfile = "3.10"

# If your toolchain doesn’t support 2024 yet, temporarily switch to:
# edition = "2021"
