[package]
name = "aeonmi_project"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
publish = false
autobins = false
default-run = "Aeonmi"

[lib]
path = "src/lib.rs"

# Pretty, shippable exe (Windows: Aeonmi.exe)
[[bin]]
name = "Aeonmi"
path = "src/main.rs"

# Legacy binary name for tests (expects CARGO_BIN_EXE_aeonmi_project)
[[bin]]
name = "aeonmi_project"
path = "src/bin/aeonmi_project.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
# Keep default build unchanged. Enable when you want the quantum stack.
default = []
quantum = ["nalgebra", "num-complex"]
qiskit = ["quantum", "pyo3", "numpy"]
ai-openai = ["reqwest"]
ai-copilot = ["reqwest"]
ai-perplexity = ["reqwest"]
ai-deepseek = ["reqwest"]

[dependencies]
# Core
anyhow = "1"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
unicode-ident = "1.0"
unicode-normalization = "0.1"
zeroize = "1"

# Config / paths
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Editor niceties
ctrlc = "3.4"

# File watching
notify = "6.1"

# Helpers for recursive copy
fs_extra = "1.3"

# TUI / terminal
crossterm = "0.27"
ratatui = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Titan math & RNG
rand = "0.8"
rand_distr = "0.4"

# Quantum math backend (feature-gated)
nalgebra = { version = "0.33", optional = true }
num-complex = { version = "0.4", optional = true }

# Qiskit bridge (feature-gated)
pyo3 = { version = "0.21", optional = true, features = ["auto-initialize"] }
numpy = { version = "0.21", optional = true }

# HTTP (AI providers)
reqwest = { version = "0.12", features = ["blocking","json"], optional = true }
serde_json = "1.0"

# For atomic file operations
tempfile = "3.10"

[dev-dependencies]
tempfile = "3.10"
insta = { version = "1.39", features = ["glob"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"