[package]
name = "tauri_tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
anyhow = "1.0"
serde_json = "1.0"
once_cell = "1.19"
tauri_bridge = { path = "../tauri_bridge" }
aeonmi_project = { path = "../.." }
portable-pty = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time"] }
uuid = { version = "1", features = ["v4"] }
